# MacProBot

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  main.py  pyproject.toml  requirements.txt
mpb/: __main__.py  constants.py  services.py
mpb/extensions/: admin.py  gaming.py  help.py  misc.py  personality.py  reminders.py  utils.py
mpb/info_cmd_msgs/: 3rdpartyapp.txt  crossover.txt  metalhud.txt  piracy.txt  screenrecord.txt  sikarugir.txt  support.txt  updatedxmt.txt  whisky.txt
