[project]
name = "macprobot"
version = "1.14.2"
description = "The official discord bot for the Mac Gaming discord server hosted by MacProTips!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.4.0",
    "hikari>=2.3.1",
    "hikari-lightbulb>=3.0.0a19",
    "openai==1.74.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
